--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "murat-eren-bos-altyapi",
+  "name": "luffyy",
   "version": "1.0",
-  "description": "Temel bos altyapidir istege gore afk, ve ya istediginiz komutlar ile kisisellestirebilirsiniz.",
+  "description": "Luffyy Was Here!",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
@@ -26,7 +23,6 @@
   },
   "license": "Apache-2.0",
   "keywords": [
-    "bos-altyapi",
-    "murat-eren"
+    "luffyy"
   ]
 }
