🌞👫 Checkpoint ./komutlar/yardım.js:41798815/3171 ./komutlar/cesaretsoru.js:41798815/322 ./komutlar/sorusoran.js:41798815/284 ./package.json:41798815/33 ./komutlar/doğruluksoru.js:41798815/191 ./komutlar/yardımm.js:41798815/1826

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "chalk": "^4.1.0",
     "jimp": "^0.16.1",
+    "discord-buttons": "^4.0.0",
     "quick.db": "^7.1.2"
   },
   "engines": {
