--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chalk": "^4.1.0",
     "jimp": "^0.16.1",
     "discord-buttons": "^4.0.0",
-    "quick.db": "^7.1.3"
+    "quick.db": "^7.1.3",
+    "croxydb": "^0.0.7"
   },
   "engines": {
     "node": "12.x"
