--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "name": "luffyy",
-  "version": "0.0.1",
-  "description": "Luffyy Was Here!",
-  "main": "bot.js",
+  "name": "glitch-v13-music-bot",
+  "main": "main.js",
+  "author": "Asuka ,
+  "description": "Discord.js V13 !",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node main.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "discord.js": "^12.5.1",
-    "fs": "^0.0.2",
-    "moment": "^2.29.1",
-    "chalk": "^4.1.0",
-    "jimp": "^0.16.1",
-    "discord-buttons": "^4.0.0",
-    "quick.db": "^7.1.3",
-    "croxydb": "^0.0.7"
+    "discord-player": "^5.1.0",
+    "discord.js": "^13.1.0",
+    "ffmpeg-static": "^4.4.0",
+    "ms": "^3.0.0-canary.1",
+    "opusscript": "^0.0.8",
+    "express": "^4.17.1"
   },
   "engines": {
-    "node": "12.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
-  "license": "Apache-2.0",
-  "keywords": [
-    "luffyy"
-  ]
+    "node": "16.x"
+  }
 }
